[gd_scene load_steps=14 format=3 uid="uid://cj7h10qvuo84a"]

[ext_resource type="Script" path="res://Scripts/map/room.gd" id="1_fwgbt"]
[ext_resource type="Texture2D" uid="uid://dwf56wio5i6t5" path="res://Assets/Sprites/map/rooms/4_door_room.png" id="2_w2wb1"]
[ext_resource type="PackedScene" uid="uid://c22lvxdmhbtwy" path="res://Scenes/map/room_components/player_detector.tscn" id="3_f275i"]
[ext_resource type="PackedScene" uid="uid://bwb84wsvb077u" path="res://Scenes/map/room_components/enemy_detector.tscn" id="4_74bx6"]
[ext_resource type="PackedScene" uid="uid://besxs1hm25htm" path="res://Scenes/map/room_components/door_tp.tscn" id="5_8jst5"]
[ext_resource type="PackedScene" uid="uid://ci4t04cng0qhi" path="res://Scenes/map/key_checks.tscn" id="6_h81v2"]
[ext_resource type="PackedScene" uid="uid://b10n6gh82eb6t" path="res://Scenes/map/room_components/door_sound.tscn" id="9_jajrt"]
[ext_resource type="PackedScene" uid="uid://c4vjouafwpnyk" path="res://Scenes/map/room_components/wall colliders/top_wall_collider_with_door_hole.tscn" id="10_04cgn"]
[ext_resource type="PackedScene" uid="uid://c8gymm5o5gc4r" path="res://Scenes/map/room_components/top_bottom_door.tscn" id="11_eskwl"]
[ext_resource type="PackedScene" uid="uid://rgs46tyeih8y" path="res://Scenes/map/room_components/wall colliders/bottom_wall_collider_with_door.tscn" id="11_mc2j3"]
[ext_resource type="PackedScene" uid="uid://cwl3212lssvcl" path="res://Scenes/map/room_components/label.tscn" id="11_x1slc"]
[ext_resource type="PackedScene" uid="uid://bcifmje2xjvvb" path="res://Scenes/map/room_components/wall colliders/side_wall_collider_with_door.tscn" id="12_7otwq"]
[ext_resource type="PackedScene" uid="uid://bog8apffuihdu" path="res://Scenes/map/room_components/left_right_door.tscn" id="12_rd2s8"]

[node name="4_door_room" type="Node2D"]
z_index = -1
script = ExtResource("1_fwgbt")

[node name="Floor_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_w2wb1")

[node name="Top_wall_collider_with_door_hole" parent="." instance=ExtResource("10_04cgn")]
position = Vector2(0, -98)

[node name="Bottom_wall_collider_with_door" parent="." instance=ExtResource("11_mc2j3")]

[node name="Left_wall_collider_with_door" parent="." instance=ExtResource("12_7otwq")]

[node name="Right_wall_collider_with_door" parent="." instance=ExtResource("12_7otwq")]
position = Vector2(177, 0)

[node name="player detector" parent="." instance=ExtResource("3_f275i")]
collision_layer = 2

[node name="enemy detector" parent="." instance=ExtResource("4_74bx6")]

[node name="DoorTPLeft" parent="." instance=ExtResource("5_8jst5")]
position = Vector2(-179, 0)
tp_direction = 3

[node name="Marker2D" parent="DoorTPLeft" index="1"]
position = Vector2(-46, 0)

[node name="DoorTPRight" parent="." instance=ExtResource("5_8jst5")]
position = Vector2(179, 0)
tp_direction = 2

[node name="Marker2D" parent="DoorTPRight" index="1"]
position = Vector2(46, 0)

[node name="DoorTPDown" parent="." instance=ExtResource("5_8jst5")]
position = Vector2(0, 99)
tp_direction = 1

[node name="Marker2D" parent="DoorTPDown" index="1"]
position = Vector2(0, 48)

[node name="DoorTPUp" parent="." instance=ExtResource("5_8jst5")]
position = Vector2(0, -100)

[node name="Marker2D" parent="DoorTPUp" index="1"]
position = Vector2(0, -51)

[node name="top_door" parent="." instance=ExtResource("11_eskwl")]
position = Vector2(0, -96)

[node name="bottom_door" parent="." instance=ExtResource("11_eskwl")]
position = Vector2(0, 91)

[node name="left_door" parent="." instance=ExtResource("12_rd2s8")]
position = Vector2(-165, -3)

[node name="right_door" parent="." instance=ExtResource("12_rd2s8")]
position = Vector2(166, -3)

[node name="Label" parent="." instance=ExtResource("11_x1slc")]

[node name="key_checks" parent="." instance=ExtResource("6_h81v2")]

[node name="door_sound" parent="." instance=ExtResource("9_jajrt")]

[connection signal="body_entered" from="player detector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="enemy detector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_exited" from="enemy detector" to="." method="_on_enemy_detector_body_exited"]

[editable path="DoorTPLeft"]
[editable path="DoorTPRight"]
[editable path="DoorTPDown"]
[editable path="DoorTPUp"]
